Bug 343438 - Retweets display the RT time instead of original time
Summary: Retweets display the RT time instead of original time
Status: RESOLVED FIXED
Alias: None
Product: choqok
Classification: Unmaintained
Component: Twitter (other bugs)
Version First Reported In: 1.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Mehrdad Momeny
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-28 08:06 UTC by Antonio Rojas
Modified: 2015-08-10 17:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2015-01-28 08:06:04 UTC
In 1.5, the retweets are correctly sorted according to the RT time, which is good. But as a side effect, the displayed time of the tweet is the RT time, instead of the original tweet time. The RT time should be used internally to sort the TL, but the displayed time should be the one of the original tweet.

Reproducible: Always
Comment 1 Andrea Scarpino 2015-08-10 17:35:35 UTC
Git commit e0fd2e4973a5f5ba176b6648b9ab203f3ef5a987 by Andrea Scarpino.
Committed on 10/08/2015 at 17:34.
Pushed by scarpino into branch 'master'.

[TwitterApi] Show original retweet time
FIXED-IN: 1.6

M  +9    -11   helperlibs/twitterapihelper/twitterapimicroblog.cpp
M  +7    -4    helperlibs/twitterapihelper/twitterapipostwidget.cpp
M  +1    -0    libchoqok/choqoktypes.h
M  +15   -3    libchoqok/ui/postwidget.cpp

http://commits.kde.org/choqok/e0fd2e4973a5f5ba176b6648b9ab203f3ef5a987