[TwitterApi] Show original retweet time

BUG: 343438
FIXED-IN: 1.6